# datathon-sunass

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml
data/catastro/buzones/: BZ.sbx
data/catastro/geografia/: SHP.shp
data/catastro/redes-agua/: RED_AGUA.qmd
data/catastro/redes-primarias/: REDES_PRIMARIAS.sbn  REDES_PRIMARIAS.shp.xml  REDES_PRIMARIAS.shx
data/catastro/redes-secundarias/: REDES_SECUNDARIAS.shp.xml
data/dana/: dana-tickets.xlsx
data/processed/: eventos.csv  eventos.parquet  incidencias_catastro.parquet  tickets_clean.parquet  tickets_geo.parquet  tickets_pii.parquet
data/raw/catastro/buzones/: BZ.sbn  BZ.shp  BZ.shp.xml  BZ.shx
data/raw/catastro/geografia/: SHP.dbf  SHP.sbn  SHP.sbx  SHP.shp.xml  SHP.shx
data/raw/catastro/redes-agua/: RED_AGUA.shx
data/raw/catastro/redes-primarias/: REDES_PRIMARIAS.dbf  REDES_PRIMARIAS.sbx  REDES_PRIMARIAS.shp
data/raw/catastro/redes-secundarias/: REDES_SECUNDARIAS.sbn  REDES_SECUNDARIAS.sbx  (+2 more)
docs/: analisis_notebook_lector.md  comprension_datos.md  viabilidad_propuestas.md
notebooks/: 00_lector_shapefile_referencia.ipynb  01_preparacion_tickets.ipynb  02_union_catastro.ipynb  03_mapa.ipynb  prueba.ipynb
reports/data_dictionaries/: buzones.xlsx  manzanas.xlsx  red_agua.xlsx  redes_primarias.xlsx  redes_secundarias.xlsx  tickets.xlsx
reports/eda/: catastro.md  tickets.md
scripts/: 01_diccionario_datos.py  02_eda_tickets.py  03_eda_catastro.py
src/epsel/: __init__.py  cleaning.py  config.py  data_dictionary.py  descriptions.py  geocoding.py  io.py  mapa.py  spatial.py  viz.py
