[project]
name = "epsel-datathon"
version = "0.1.0"
description = "Datathon SUNASS 2026 — Gestión de incidencias operacionales EPSEL (Chiclayo). Análisis de tickets DANA + catastro técnico (GIS)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "folium>=0.16",
    "mapclassify>=2.6",
    "pyarrow>=16.0",
    "geopy>=2.4.1",
]

[dependency-groups]
dev = [
    "ipykernel<7",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epsel"]
